--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="main">
         <h1>Онлайн магазин</h1>
-        <img src="photo.jpg" alt="Тут должно быть фото">
+        <img src="photo.jpg" alt="Тут должно быть фото" width="100%">
         <p>Тут текст</p>
         <button id="buy">Купить</button>
     </div>
