--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="main">
-        <h1>Онлайн магазин</h1>
+        <h1>Онлайн магазин1</h1>
         <img src="photo.jpg" alt="Тут должно быть фото" width="100%">
         <p>Тут текст</p>
         <button id="buy">Купить</button>
